--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="z-index: 1;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="z-index: 1;">
     <!-- Container wrapper -->
     <div class="container">
         <!-- Navbar brand -->
@@ -31,7 +31,7 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="/search">Library</a>
+                    <a class="nav-link" th:href="@{/library}">Library</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:href="@{/upload}">Upload</a>
