--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-dark bg-opacity-10">
 <th:block th:replace="/fragments/nav"></th:block>
-<section id="page-container">
+<section id="page-container" style="margin-top: 58px">
 
 </section>
 <th:block th:replace="/fragments/player"></th:block>
