--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
     <title>Register - musiCloud</title>
 
 </head>
-<body class="bg-dark bg-opacity-10">
+<body class="bg-dark bg-opacity-10" style="margin-top: 88px">
 <th:block th:replace="/fragments/nav"></th:block>
 
 <div class="text-center my-5">
