--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -5,7 +5,7 @@
     <th:block th:replace="~{/fragments/head}"></th:block>
 
 </head>
-<body class="bg-dark bg-opacity-10">
+<body class="bg-dark bg-opacity-10" style="margin-top: 58px">
 <th:block th:replace="~{/fragments/nav}"></th:block>
 
 <div class="container py-5 h-100">
