started working on search page

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -42,7 +42,7 @@
             </ul>
             <!-- Left links -->
             <div class="w-100 p-1 px-4" sec:authorize="isAuthenticated()">
-                <form class="input-group w-auto my-auto d-none d-sm-flex" th:action="@{/search}">
+                <form id="search" class="input-group w-auto my-auto d-none d-sm-flex" th:action="@{/search}">
                     <input
                             autocomplete="off"
                             name="q"
