fixed volume bug and made play next button

--- a/src/main/resources/templates/fragments/player.html
+++ b/src/main/resources/templates/fragments/player.html
@@ -5,7 +5,11 @@
     </div>
     <div class="controls">
         <div class="play-container">
-            <div class="toggle-play play">
+            <div class="previous play">
+            </div>
+            <div class="toggle-play pause">
+            </div>
+            <div class="next fas fa-step-forward px-2">
             </div>
         </div>
         <div class="time">
