--- a/src/main/resources/templates/fragments/player.html
+++ b/src/main/resources/templates/fragments/player.html
@@ -5,9 +5,9 @@
     </div>
     <div class="controls">
         <div class="play-container">
-            <div class="previous play">
+            <div class="previous fas fa-step-backward px-2">
             </div>
-            <div class="toggle-play pause">
+            <div class="fas fa-pause toggle-play fa-2x mx-2">
             </div>
             <div class="next fas fa-step-forward px-2">
             </div>
