password reset working

--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -19,10 +19,8 @@
 
                     <h3 class="mb-5">Reset password</h3>
 
-                    <p th:if="${bad_credentials}" class="errors alert alert-danger">
-                        Invalid username or password.
-                    </p>
-                    <form th:action="@{/reset-password/}" th:method="post">
+
+                    <form th:action="@{/reset-password/{id}(id=${id})}" th:method="post" th:object="${resetPasswordDto}">
 
                         <div class="form-outline mb-4">
                             <input type="password" id="password" class="form-control form-control-lg" th:field="*{password}" th:errorclass="is-invalid">
@@ -34,7 +32,7 @@
                             <input type="password" id="confirmPassword" class="form-control form-control-lg" th:field="*{confirmPassword}" th:errorclass="is-invalid">
                             <label class="form-label" for="confirmPassword" style="margin-left: 0px;">Confirm Password</label>
                             <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68px;"></div><div class="form-notch-trailing"></div></div>
-                            <div class="invalid-feedback" th:if="${#fields.hasErrors('confirmPassword')}" th:text="${#fields.errors('confirmPassword').get(0)}">Error</div></div>
+                            <div class="invalid-feedback" >Passwords must be matching.</div></div>
 
                         <button class="btn btn-primary btn-lg btn-block text-dark" type="submit" style="background-color: #ffac44;">Set password</button>
                     </form>
