--- a/src/main/resources/templates/request-reset-password.html
+++ b/src/main/resources/templates/request-reset-password.html
@@ -28,7 +28,7 @@
                             <input type="email" id="email" class="form-control form-control-lg" th:field="*{email}" th:errorclass="is-invalid">
                             <label class="form-label" for="email" style="margin-left: 0px;">Email</label>
                             <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div>
-                            <div class="invalid-feedback mb-2" >Error</div></div>
+                            <div class="invalid-feedback mb-2" >That address is either invalid or there is no user with this email in our database.</div></div>
 
                         <button class="btn btn-primary btn-lg btn-block text-dark" type="submit" style="background-color: #ffac44;">Send password reset email</button>
                     </form>
