scheduler deletes expired requests

--- a/src/main/resources/templates/email/reset-password.html
+++ b/src/main/resources/templates/email/reset-password.html
@@ -44,7 +44,7 @@
                   </p>
 
                   <a th:href="@{http://192.168.0.100:8080/reset-password/{id}(id=${id})}"
-                     style="background:#20e277;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">Reset
+                     style="background:#ffac44;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">Reset
                     Password</a>
 
                   <p style="color:#455056; font-size:15px;line-height:24px; margin-top: 30px;">
