--- a/src/main/resources/templates/request-reset-password.html
+++ b/src/main/resources/templates/request-reset-password.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <th:block th:replace="/fragments/head"></th:block>
-    <title>Login - musiCloud</title>
+    <title>Reset password - musiCloud</title>
 
 </head>
 <body class="bg-dark bg-opacity-10" style="margin-top: 88px">
@@ -25,7 +25,7 @@
                     <form th:action="@{/request-reset-password}" th:method="post" th:object="${passwordResetRequestDto}">
 
                         <div class="form-outline mb-4">
-                            <input type="email" id="email" class="form-control form-control-lg" th:field="*{email}" th:errorclass="is-invalid">
+                            <input type="email" id="email" class="form-control form-control-lg" th:classappend ="*{email != null && email.length > 0} ? active" th:field="*{email}" th:errorclass="is-invalid">
                             <label class="form-label" for="email" style="margin-left: 0px;">Email</label>
                             <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div>
                             <div class="invalid-feedback mb-2" >That address is either invalid or there is no user with this email in our database.</div></div>
