--- a/src/main/resources/templates/request-reset-password-post.html
+++ b/src/main/resources/templates/request-reset-password-post.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <th:block th:replace="/fragments/head"></th:block>
-    <title>Login - musiCloud</title>
+    <title>Reset password - musiCloud</title>
 
 </head>
 <body class="bg-dark bg-opacity-10" style="margin-top: 88px">
