trying to change thymeleaf path to see if heroku would decide to work again

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Home - musiCloud</title>
-    <th:block th:replace="~{/fragments/head}"></th:block>
+    <th:block th:replace="~{./fragments/head}"></th:block>
 </head>
 <body class="bg-dark bg-opacity-10" >
-<th:block th:replace="~{/fragments/nav}"></th:block>
+<th:block th:replace="~{./fragments/nav}"></th:block>
 <div class="bg-image"
      style="background-image: url('https://res.cloudinary.com/dtzjbyjzq/image/upload/v1657773421/images/concert-2564242_1920_inexkv.jpg'); height: 100vh">
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
