found and fixed bug where heroku cannot find the fragments

--- a/src/main/resources/templates/admin_dashboard.html
+++ b/src/main/resources/templates/admin_dashboard.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <th:block th:replace="/fragments/head"></th:block>
+  <th:block th:replace="fragments/head"></th:block>
   <title>Title</title>
 </head>
 <body class="bg-dark bg-opacity-10">
-<th:block th:replace="/fragments/nav"></th:block>
+<th:block th:replace="fragments/nav"></th:block>
 
 
-    <th:block th:replace="/fragments/admin_sidenav"></th:block>
+    <th:block th:replace="fragments/admin_sidenav"></th:block>
 <main style="margin-top: 58px">
   <div class="container pt-4">
     <!-- Section: Main chart -->
