--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <th:block th:replace="/fragments/head"></th:block>
+    <th:block th:replace="fragments/head"></th:block>
     <title>Login - musiCloud</title>
 
 </head>
 <body class="bg-dark bg-opacity-10" style="margin-top: 88px">
-<th:block th:replace="/fragments/nav"></th:block>
+<th:block th:replace="fragments/nav"></th:block>
 <div class="text-center my-5">
     <img src="https://res.cloudinary.com/dtzjbyjzq/image/upload/v1657223456/images/1-logo-v2_qqr2yo.png" alt="logo" width="300">
 </div>
