--- a/src/main/resources/templates/admin_users.html
+++ b/src/main/resources/templates/admin_users.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <th:block th:replace="/fragments/head"></th:block>
+    <th:block th:replace="fragments/head"></th:block>
     <title>Title</title>
 
 
 </head>
 <body class="bg-dark bg-opacity-10">
-<th:block th:replace="/fragments/nav"></th:block>
+<th:block th:replace="fragments/nav"></th:block>
 
-    <th:block th:replace="/fragments/admin_sidenav"></th:block>
+    <th:block th:replace="fragments/admin_sidenav"></th:block>
 
 <main style="margin-top: 58px">
     <div class="container pt-4">
