--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <title>Home - musiCloud</title>
-    <th:block th:replace="/fragments/head"></th:block>
+    <th:block th:replace="fragments/head"></th:block>
     <script type="module" th:src="@{/src/app.js}"></script>
 
 </head>
 <body class="bg-dark bg-opacity-10">
-<th:block th:replace="/fragments/nav"></th:block>
+<th:block th:replace="fragments/nav"></th:block>
 <section id="page-container" style="margin-top: 58px">
 
 </section>
-<th:block th:replace="/fragments/player"></th:block>
+<th:block th:replace="fragments/player"></th:block>
 </body>
 </html>
