--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>Upload - musiCloud</title>
-    <th:block th:replace="~{/fragments/head}"></th:block>
+    <th:block th:replace="fragments/head"></th:block>
 
 </head>
 <body class="bg-dark bg-opacity-10" style="margin-top: 58px">
-<th:block th:replace="~{/fragments/nav}"></th:block>
+<th:block th:replace="fragments/nav"></th:block>
 
 <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
