fixed reset password email url

--- a/src/main/resources/templates/email/reset-password.html
+++ b/src/main/resources/templates/email/reset-password.html
@@ -43,7 +43,7 @@
                     But don't worry! You can use the following button to reset your password:
                   </p>
 
-                  <a th:href="@{http{secure}://{host}:{port}/reset-password/{id}(id=${id}, host=${host}, port=${port}, secure=${secure})}"
+                  <a th:href="@{http://{host}/reset-password/{id}(id=${id}, host=${host})}"
                      style="background:#ffac44;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">Reset
                     Password</a>
 
