--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
                             <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68px;"></div><div class="form-notch-trailing"></div></div></div>
                         <a th:href="@{/request-reset-password}">Forgot password?</a>
 
-                        <button class="btn btn-primary btn-lg btn-block text-dark my-4" type="submit" style="background-color: #ffac44;">Login</button>
+                        <button class="btn btn-primary btn-lg btn-block text-dark mt-4" type="submit" style="background-color: #ffac44;">Login</button>
                     </form>
                 </div>
             </div>
