--- a/src/main/resources/templates/request-reset-password.html
+++ b/src/main/resources/templates/request-reset-password.html
@@ -22,7 +22,7 @@
                     <p th:if="${bad_credentials}" class="errors alert alert-danger">
                         Invalid username or password.
                     </p>
-                    <form th:action="@{/request-reset-password}" th:method="post" th:object="${passwordResetRequestDto}">
+                    <form th:action="@{/reset-password}" th:method="post" th:object="${passwordResetRequestDto}">
 
                         <div class="form-outline mb-4">
                             <input type="email" id="email" class="form-control form-control-lg" th:classappend ="*{email != null && email.length > 0} ? active" th:field="*{email}" th:errorclass="is-invalid">
