added title to admin pages

--- a/src/main/resources/templates/admin_users.html
+++ b/src/main/resources/templates/admin_users.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <th:block th:replace="fragments/head"></th:block>
-    <title>Title</title>
+    <title>User Management - musiCloud</title>
 
 
 </head>
