--- a/src/main/resources/templates/admin_dashboard.html
+++ b/src/main/resources/templates/admin_dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <th:block th:replace="fragments/head"></th:block>
-  <title>Title</title>
+  <title>Admin Dashboard - musiCloud</title>
 </head>
 <body class="bg-dark bg-opacity-10">
 <th:block th:replace="fragments/nav"></th:block>
